--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/style.css"/>
+        <style>
+                body{
+                        min-height : 100vh;
+                       display:flex;
+                        justify-content : center;
+                        align-items:center;
+                }
+            .hv {
+                    
+                    padding: 16px 32px;
+                    text-align:center;
+                }
+                .hv:hover {
+                        opacity:0.8
+                }
     <title>Document</title>
 </head>
 <body class="w-screen min-h-screen flex justify-center items-center">
     <div class="container mx-auto text-center">
-        <a href="https://erlanggaht.github.io/tailwindProject.github.io/public/" class="text-slate-100 py-4 px-12 bg-green-600 text-2xl hover:bg-green-500">Masuk</a>
+        <a href="https://erlanggaht.github.io/tailwindProject.github.io/public/" class="hv text-slate-100 py-4 px-12 bg-green-600 text-2xl hover:bg-green-500">Masuk</a>
     </div>
  
 </body>
