--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css" />
+    <link rel="stylesheet" href="../src/css/animate.css/animate.min.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <title>Document</title>
     <style>
@@ -15,7 +15,7 @@ body{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
-
+/* 
  .befsection::after{
   content: "";
   background-image: url('wave.svg');
@@ -27,7 +27,7 @@ body{
   height: 100%;
   z-index: -20;
   
- }
+ } */
 
  .card {
    flex : 0 0 100%
@@ -37,7 +37,7 @@ body{
  
     </style>
   </head>
-    <div class="group  fixed bottom-3 right-2 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
+    <div id="btn-tb" class="group  fixed bottom-3 right-2 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
   
   <body id="#body" class="bg-slate box-border scroll-m-6 snap-start">
 
@@ -45,9 +45,7 @@ body{
     <!-- <section>
    
     </section> -->
-
-    <section class=" befsection relative ">
-    
+    <section class="befsection after:content-[''] after:bg-hero after:-z-20 after:absolute after:w-full after:top-0 after:bg-bottom after:bg-cover after:h-full  relative">
       <div id="head">
         <nav class="bg-transparent relative z-30 p-2 animate__animated animate__fadeInUp animate__delay-0.8s py-10 sm:py-0">
           <div
@@ -350,7 +348,7 @@ body{
       <div id="copyright" class="py-6 px-4 " onmouseover="copyrightHover()">
         <div class="flex flex-col sm:flex-row sm:justify-between justify-center items-center flex-wrap">
           <span>Copyright © 2022 Erlanggaht. All Rights Reserved.</span>
-          <div class="pr-14 copyrightTerms flex gap-4 text-dark text-slate-400">
+          <div class="pr-0 sm:pr-14 copyrightTerms flex justify-between items-center text-center gap-4 text-dark text-slate-400">
             <span>Terms of Service</span> |
             <span>Service Level Agreement</span>
           </div>
