--- a/public/index.html
+++ b/public/index.html
@@ -318,7 +318,7 @@ body{
       <footer class="flex flex-wrap gap-6 sm:gap-20 bg-green-700 text-white mx-auto  px-6 pt-10 pb-16 w-full sm:justify-center">
        
         <!-- Footer Content Flex 1 -->
-          <div id="Flex1 w-full">
+          <div id="Flex1">
             <div class="inFlex1">
               <h2 class="logoFooter mb-[-10px]">./KontakSaya</h2>
               <span class="text-left w-full inline-block text-current text-md ml-10">Kontak Saya</span>
@@ -333,7 +333,7 @@ body{
 
 
        <!-- Footer Content Flex 2 -->
-       <div id="Flex2 w-full">
+       <div id="Flex2">
         <div class="inFlex2">
           <h2 class="logoFooter mb-[-10px]">./Menu</h2>
         </div>
