--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/src/css/animate.css/animate.min.css" />
+    <link rel="stylesheet" href="src/css/animate.css/animate.min.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <title>Document</title>
     <style>
@@ -348,7 +348,7 @@ body{
       <div id="copyright" class="py-6 px-4 " onmouseover="copyrightHover()">
         <div class="flex flex-col sm:flex-row sm:justify-between justify-center items-center flex-wrap">
           <span>Copyright © 2022 Erlanggaht. All Rights Reserved.</span>
-          <div class="pr-0 sm:pr-14 copyrightTerms flex justify-between items-center text-center gap-4 text-dark text-slate-400">
+          <div class="pr-0 sm:pr-18 copyrightTerms flex justify-between items-center text-center gap-4 text-dark text-slate-400">
             <span>Terms of Service</span> |
             <span>Service Level Agreement</span>
           </div>
