--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="src/css/animate.css/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <title>Document</title>
     <style>
@@ -61,7 +61,7 @@ body{
               <span class="w-[27px] h-[3px] bg-slate-50"></span>
             </div>
           
-            <ul id="ul" class="nav-no-filter gap-5 font-thin text-slate-50 flex sm:items-center sm:flex-row mt-1 md:flex-nowrap sm:text-xl text-md drop-shadow-md font-bold  absolute right-6 top-24 sm:static z-50 transition-all ease-in-out duration-[.6s] sm:scale-[1] bg-green-600 shadow-md sm:bg-inherit shadow-inherit sm:h-[inherit] flex-col grow ">
+            <ul id="ul" class="nav-no-filter gap-5 font-thin text-slate-50 flex-wrap items-center justify-center sm:items-center sm:flex-row mt-1 md:flex-nowrap sm:text-xl text-md drop-shadow-md font-bold  absolute right-6 top-24 sm:static z-50 transition-all ease-in-out duration-[.6s] sm:scale-[1] bg-green-600 shadow-md sm:bg-inherit shadow-inherit sm:h-[inherit] flex-col grow ">
               <li
                 class="hover:cursor-pointer hover:text-lime-50 transition-all hover:scale-105"
               >
@@ -348,7 +348,7 @@ body{
       <div id="copyright" class="py-6 px-4 " onmouseover="copyrightHover()">
         <div class="flex flex-col sm:flex-row sm:justify-between justify-center items-center flex-wrap">
           <span>Copyright © 2022 Erlanggaht. All Rights Reserved.</span>
-          <div class="pr-0 sm:pr-18 copyrightTerms flex justify-between items-center text-center gap-4 text-dark text-slate-400">
+          <div class="pr-0 sm:pr-18 copyrightTerms flex justify-between items-center text-center gap-4 text-dark text-slate-400" style="margin-right:50px">
             <span>Terms of Service</span> |
             <span>Service Level Agreement</span>
           </div>
