--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ body{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
-/* 
+
  .befsection::after{
   content: "";
   background-image: url('wave.svg');
@@ -27,7 +27,7 @@ body{
   height: 100%;
   z-index: -20;
   
- } */
+ }
 
  .card {
    flex : 0 0 100%
@@ -61,7 +61,7 @@ body{
               <span class="w-[27px] h-[3px] bg-slate-50"></span>
             </div>
           
-            <ul id="ul" class="nav-no-filter gap-5 font-thin text-slate-50 flex-wrap items-center justify-center sm:items-center sm:flex-row mt-1 md:flex-nowrap sm:text-xl text-md drop-shadow-md font-bold  absolute right-6 top-24 sm:static z-50 transition-all ease-in-out duration-[.6s] sm:scale-[1] bg-green-600 shadow-md sm:bg-inherit shadow-inherit sm:h-[inherit] flex-col grow ">
+            <ul id="ul" class="nav-no-filter gap-5 font-thin text-slate-50  sm:items-center sm:flex-row mt-1 sm:flex-nowrap sm:text-xl text-md drop-shadow-md font-bold  absolute right-6 top-24 sm:static z-50 transition-all ease-in-out duration-[.6s] sm:scale-[1] bg-green-600 shadow-md sm:bg-inherit shadow-inherit sm:h-[inherit] flex-col grow ">
               <li
                 class="hover:cursor-pointer hover:text-lime-50 transition-all hover:scale-105"
               >
