--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@ body{
 
     </section>
 
-    <section class="h-full mx-auto w-full sm:mt-20 mt-0">
+    <section class="h-full mx-auto w-full sm:mt-20 mt-10">
       <div id="card-description" class="flex flex-col px-6 gap-4 sm:flex-row w-full justify-center scale-0 transition-all duration-[1.3s]">
         <div class="w-full bg-transparent p-2 shadow-sm shadow-green-400 rounded-md hover:border-solid hover:border-green-500 border-[1px] transition-all duration-400 hover:border-[1px]">
           <h1 class="text-xl font-bold tracking-tight ">Hello, </h1>
@@ -314,7 +314,7 @@ body{
             </table>
            </p>
           </div>
-          
+                     </div>
         </div>
            <div class="ButtonCard mt-20 w-full mx-auto flex items-center justify-center gap-4 sm:hidden"> 
             <a href="#Card1" class="w-[38px] inline-block bg-green-600 h-[38px] rounded-full focus-within:bg-green-500"></a>
