--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 body{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  max-width: 100vw;
+  width: 100vw
 }
 
  .befsection::after{
@@ -176,7 +178,7 @@ body{
 
     </section>
 
-    <section class="h-full mx-auto w-full sm:mt-20 mt-10">
+    <section class="h-full mx-auto w-full sm:mt-20 mt-20">
       <div id="card-description" class="flex flex-col px-6 gap-4 sm:flex-row w-full justify-center scale-0 transition-all duration-[1.3s]">
         <div class="w-full bg-transparent p-2 shadow-sm shadow-green-400 rounded-md hover:border-solid hover:border-green-500 border-[1px] transition-all duration-400 hover:border-[1px]">
           <h1 class="text-xl font-bold tracking-tight ">Hello, </h1>
@@ -193,7 +195,7 @@ body{
       </div>
 
 
-      <div id="CardProfile" class="flex overflow-x-auto sm:overflow-x-hidden scroll-px-2 snap-mandatory gap-5 scroll-smooth sm:px-2 sm:mx-5 sm:mt-28 sm:mb-6 mt-12 opacity-5 transition-all duration-[1.6s] shadow-sm">
+      <div id="CardProfile" class="flex overflow-x-auto sm:overflow-x-auto scroll-px-2 snap-mandatory gap-5 scroll-smooth sm:px-2 sm:mx-5 sm:mt-28 sm:mb-6 mt-12 opacity-5 transition-all duration-[1.6s] shadow-sm">
         
         <div id="Card1" class="card  text-green-800 flex flex-col sm:flex-row py-4 justify-around shadow-lg">
           <div class="p-2"> 
