--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@ body{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   max-width: 100vw;
-  width: 100vw
+  width: 100vw;
+min-height : 100vh;
+background:red
 }
 
  .befsection::after{
