--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@ min-height : 100vh;
 background:red
 }
 
+section{
+  width :100vw;
+  }
+
  .befsection::after{
   content: "";
   background-image: url('wave.svg');
