--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -17,7 +17,6 @@ body{
   max-width: 100vw;
   width: 100vw;
 min-height : 100vh;
-background:red
 }
 
 section{
@@ -50,10 +49,10 @@ section{
  
     </style>
   </head>
-    <div id="btn-tb" class="group  fixed bottom-3 right-2 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
+  
   
   <body id="#body" class="bg-slate box-border scroll-m-6 snap-start">
-
+  <div id="btn-tb" class="group  fixed bottom-3 right-2 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
     
     <!-- <section>
    
