--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@ body{
   max-width: 100vw;
   width: 100vw;
 min-height : 100vh;
+overflow-x: hidden;
 }
 
 section{
@@ -52,7 +53,7 @@ section{
   
   
   <body id="#body" class="bg-slate box-border scroll-m-6 snap-start">
-  <div id="btn-tb" class="group  fixed bottom-3 right-2 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
+  <div id="btn-tb" class="group  fixed bottom-3 right-6 py-3 px-6 w-9 flex justify-center border-2 border-white rounded-full bg-green-700  text-slate-100 shadow-xl cursor-pointer z-10 overflow-hidden" onclick="Top()"> <i class="icon-rocket text-2xl  group-hover:-rotate-45 group-hover:translate-y-6 -45 group-hover:transition-transform duration-[.7s] ease-in group-active:-translate-y-14 " ></i> </div>
     
     <!-- <section>
    
