--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,16 @@
     <title>Document</title>
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,700;1,200&display=swap');
-
+html{
+  overflow-x: hidden; 
+  }
 body{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   max-width: 100vw;
   width: 100vw;
 min-height : 100vh;
-overflow-x: hidden;
+
 }
 
 section{
