--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@ section{
       display: block;
     }
    
+    
+  @media screen and (max-width:360px) {
+    .seci{margin-top:170px}
  }
  
     </style>
@@ -186,7 +189,7 @@ section{
 
     </section>
 
-    <section class="h-full mx-auto w-full sm:mt-20 mt-20">
+    <section class="seci h-full mx-auto w-full sm:mt-20 mt-20">
       <div id="card-description" class="flex flex-col px-6 gap-4 sm:flex-row w-full justify-center scale-0 transition-all duration-[1.3s]">
         <div class="w-full bg-transparent p-2 shadow-sm shadow-green-400 rounded-md hover:border-solid hover:border-green-500 border-[1px] transition-all duration-400 hover:border-[1px]">
           <h1 class="text-xl font-bold tracking-tight ">Hello, </h1>
